--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://kit.fontawesome.com/a395e49728.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -166,7 +167,8 @@
 					<div class="squareInnerContainer">
 
 						<div class ="squareIcon">
-
+							
+							<i class="fa fa-clock-o"></i>
 						</div>
 								
 						<div class="squareContent">
