--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 								
 						<div class="squareContent">
 							<h2>4</h2>
-							<h3>Websites Made</h3>
+							<h3>Websites Crafted</h3>
 						</div>	
 
 					</div>	
