--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 					<div class="col-md-12 text-center">
 						<h2>TECHNICAL SKILLS</h2>
 						<P>A representation of my skill proficiency.</P>
+						<p class="hint"><--Scroll Left and Right to see More--></p>
 					</div>
 
 					<div class="owl-carousel owl-theme">
