--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="col-md-12 text-center">
 						<h2>TECHNICAL SKILLS</h2>
 						<P>A representation of my skill proficiency.</P>
-						<p class="hint"><--Drag Left and Right to see More--></p>
+						<p class="hint"><i><--Drag Left and Right to see More--></i></p>
 					</div>
 
 					<div class="owl-carousel owl-theme">
