--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 </div>
 
 
-
+		<script src="js/countUp.js"></script>
 		<script src="js/jquery.superslides.min.js"></script>
 		<script src="js/jquery.easypiechart.min.js"></script>
 		<script src="js/owl.carousel.min.js"></script>
