--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="col-md-12 text-center">
 						<h2>TECHNICAL SKILLS</h2>
 						<P>A representation of my skill proficiency.</P>
-						 <p><i><--Drag left and right to see more--></i></p> 
+						 <p><i><img src=img.icons/l>Drag left and right to see more<img src=img.icons/r></i></p> 
 					</div>
 
 					<div class="owl-carousel owl-theme">
@@ -128,8 +128,8 @@
 						</div>
 
 						<div class="skill">
-							<span class="chart" data-percent="25">
-								<span class="percent">25</span>
+							<span class="chart" data-percent="45">
+								<span class="percent">45</span>
 								<canvas height="152" width="152"></canvas>
 							</span>
 							<h4>GitHub</h4>
