--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="col-md-12 text-center">
 						<h2>TECHNICAL SKILLS</h2>
 						<P>A representation of my skill proficiency.</P>
-						 <p><i><img src=img.icons/l>Drag left and right to see more<img src=img.icons/r></i></p> 
+						 <p><i><img src=img.icons/l.png>Drag left and right to see more<img src=img.icons/r.png></i></p> 
 					</div>
 
 					<div class="owl-carousel owl-theme">
