--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 					<div class="col-md-12 text-center">
 						<h2>TECHNICAL SKILLS</h2>
 						<P>A representation of my skill proficiency.</P>
-						 <p><i><--Drag left and right to see more--></i></p> 
+						 <p><i><img class="tip" src="img/icons/l.png">Drag left and right to see more<img class="tip" src="img/icons/r.png"></i></p> 
 					</div>
 
 					<div class="owl-carousel owl-theme">
@@ -97,6 +97,15 @@
 							</span>
 							<h4>Management</h4>
 							<p>Seasoned Professional.</p>
+						</div>
+
+						<div class="skill">
+							<span class="chart" data-percent="80">
+								<span class="percent">80</span>
+								<canvas height="152" width="152"></canvas>
+							</span>
+							<h4>WordPress</h4>
+							<p>Almost finished with a WordPress Alison Course.</p>
 						</div>
 
 						<div class="skill">
@@ -128,8 +137,8 @@
 						</div>
 
 						<div class="skill">
-							<span class="chart" data-percent="25">
-								<span class="percent">25</span>
+							<span class="chart" data-percent="45">
+								<span class="percent">45</span>
 								<canvas height="152" width="152"></canvas>
 							</span>
 							<h4>GitHub</h4>
@@ -196,7 +205,7 @@
 						</div>
 								
 						<div class="squareContent">
-							<h2 class="counter">64</h2>
+							<h2 class="counter">89</h2>
 							<h3>GitHub Contributions</h3>
 						</div>	
 
