--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
 
 								<div class="item"> 
 
-									<img src="img/portfolio/thumbnails/19 me at the beach square.png">
+									<img src="img/portfolio/thumbnails/19 Me at the beach square.png">
 
 									<div class="icons">
 										<a href="img/portfolio/me at the beach.png" title="View image" class="openButton" data-fancybox data-caption="Visiting family in Florida and sunning on the beach.">
